<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingHorizontal="10dp"
            android:paddingVertical="10dp">

            <TextView
                android:id="@+id/txtName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/royal"
                android:textSize="20dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/star1"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:src="@drawable/ic_star"
                    app:tint="@color/yellow" />

                <ImageView
                    android:id="@+id/star2"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:src="@drawable/ic_star"
                    app:tint="@color/yellow" />

                <ImageView
                    android:id="@+id/star3"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:src="@drawable/ic_star"
                    app:tint="@color/yellow" />

                <ImageView
                    android:id="@+id/star4"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:src="@drawable/ic_star"
                    app:tint="@color/yellow" />

                <ImageView
                    android:id="@+id/star5"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:src="@drawable/ic_star"
                    app:tint="@color/yellow" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="7k reviews"
                    android:textSize="10sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingVertical="10dp">

                <ImageView
                    android:id="@+id/detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_detail" />

                <TextView
                    android:id="@+id/txtDesc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    tools:text="@string/lorem"
                    android:textSize="17sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingVertical="10dp">

                <ImageView
                    android:id="@+id/location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_location" />

                <TextView
                    android:id="@+id/txtAddress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    tools:text="@string/lorem"
                    android:textSize="17sp" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/related"
                android:textSize="20dp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="128dp" />

        </LinearLayout>


    </LinearLayout>


</ScrollView>