<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.MainActivity">

    <!-- App bar -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/white"
        android:elevation="4dp">

        <ImageView
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:src="@drawable/baseline_arrow_back_ios_new_24"
            app:tint="@android:color/black" />


        <TextView
            android:id="@+id/toolbar_title1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fb_name"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_gravity="center"/>
        <TextView
            android:id="@+id/toolbar_title2"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:text="9+"
            android:textColor="@color/white"
            android:textSize="16dp"
            android:background="@drawable/rounded_background"
            android:gravity="center"
            android:layout_gravity="center"/>
        <ImageView
            android:id="@+id/more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/baseline_arrow_drop_down_24"
            app:tint="@android:color/black" />

        <ImageView
            android:id="@+id/search"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:src="@drawable/baseline_search_24"
            app:tint="@android:color/black" />

        <ImageView
            android:id="@+id/edit"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:src="@drawable/baseline_edit_24"
            app:tint="@android:color/black" />

    </androidx.appcompat.widget.Toolbar>

    <!-- Content area -->
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <!-- Background Image -->
        <ImageView
            android:id="@+id/profileBackground"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:background="@drawable/nihongo"/>

        <!-- Camera ImageView -->
        <ImageView
            android:id="@+id/camera"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginHorizontal="5dp"
            android:layout_marginVertical="5dp"
            android:padding="5dp"
            android:layout_alignBottom="@id/profileBackground"
            android:layout_alignEnd="@id/profileBackground"
            android:background="@drawable/circle_shape"
            android:src="@drawable/baseline_photo_camera_24"
            app:tint="@android:color/black" />

        <!-- Profile Avatar -->
        <RelativeLayout
            android:id="@+id/profileAvatarContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/profileBackground"
            android:layout_marginTop="-100dp">

            <ImageView
                android:id="@+id/profileAvatar"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:layout_marginHorizontal="20dp"
                android:background="@drawable/fb_profile"
                android:padding="5dp" />

            <ImageView
                android:id="@+id/camera2"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:padding="5dp"
                android:layout_alignBottom="@id/profileAvatar"
                android:layout_alignEnd="@id/profileAvatar"
                android:background="@drawable/circle_shape"
                android:src="@drawable/baseline_photo_camera_24"
                app:tint="@android:color/black" />

        </RelativeLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="5dp"
        android:layout_marginHorizontal="15dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtFName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_marginEnd="5dp"
                android:text="@string/Firstname" />
            <TextView
                android:id="@+id/txtLName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/Lastname" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/follower"
                android:textStyle="bold"
                android:layout_marginEnd="8dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="friends"/>
        </LinearLayout>

        <TextView
            android:id="@+id/Textbio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Love traveling"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_gravity="center">

        <RelativeLayout
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/addStory"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:backgroundTint="@color/blue"
                android:scaleType="fitCenter"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="+ Add to story"
                android:textColor="@color/white"
                android:textStyle="bold" />
        </RelativeLayout>


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/editProfile"
                android:layout_width="160dp"
                android:layout_height="match_parent"
                android:backgroundTint="@color/darkgrey"
                android:scaleType="fitStart"
                android:src="@drawable/baseline_edit_24" />

            <TextView
                android:id="@+id/text_more"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:textStyle="bold"
                android:text="Edit profile"
                android:textColor="@android:color/black"
                android:textSize="12sp" />
        </RelativeLayout>

        <ImageButton
            android:id="@+id/more2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/baseline_more_horiz_24"
            android:backgroundTint="@color/darkgrey"
            android:scaleType="fitCenter"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:src="@drawable/baseline_card_travel_24"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Student at"
                android:paddingEnd="8dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:text="@string/university" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:src="@drawable/baseline_favorite_24"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Single" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:src="@drawable/baseline_more_horiz_24"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="See your About info" />
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginVertical="10dp"
        android:layout_marginHorizontal="15dp">

        <ImageButton
            android:id="@+id/editDetail2"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:backgroundTint="@color/clear_blue"
            android:scaleType="fitCenter"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:textStyle="bold"
            android:text="Edit public details"
            android:textColor="@color/blue" />
    </RelativeLayout>


</LinearLayout>
